@@ -33,7 +33,7 @@ DEFAULTS = {
     "default_virt_type"           : "auto",
     "default_virt_file_size"      : "5",
     "default_virt_ram"            : "512",
-    "default_ownership"           : [ "admin" ],
+    "default_ownership"           : "admin",
     "dhcpd_conf"                  : "/etc/dhcpd.conf",
     "dhcpd_bin"                   : "/usr/sbin/dhcpd",
     "dnsmasq_bin"                 : "/usr/sbin/dnsmasq",
