@@ -9,7 +9,7 @@ default_virt_bridge: xenbr0
 default_virt_type: auto
 default_virt_file_size: 5
 default_virt_ram: 512
-default_ownership: [ "admin" ]
+default_ownership: "admin"
 dhcpd_bin: /usr/sbin/dhcpd
 dhcpd_conf: /etc/dhcpd.conf
 dnsmasq_bin: /usr/sbin/dnsmasq
